Propagate annotation processor crashes in Turbine
Turbine previously caught annotation processor crashes, logged them as TurbineDiagnostic of kind PROC, and returned null to abort compilation. This resulted in crashes being reported as standard compilation errors, and prevented them from being handled at higher levels.

This change refactors crash handling to throw an AnnotationProcessingError that aborts compilation and is handled at the top level.

PiperOrigin-RevId: 959257215